# My_C_Test

./: .gitignore  Makefile  README.md  common.h
1.Invert each string/: test  test.c
10.验证回文字符串-ⅱ/: 680.验证回文字符串-ⅱ.c  README.md
11.平方数之和/: 633.平方数之和.c  README.md
12.合并两个有序数组/: 88.合并两个有序数组.c  README.md
2.The sum of the closest three Numbers/: README.md  sum  sum.c
3.至少有K个重复字符的最长子串/: README.md  test.c
4.整数替换/: 397.整数替换test.c  README.md
5.完全平方数/: README.md  test.c
6.实现-str-str/: 28.实现-str-strtest.c  README.md
7.字符串转换整数-atoitest/: 8.字符串转换整数-atoitest.c  README.md
8.删除链表的倒数第N个节点/: 19.删除链表的倒数第n个节点.c  README.md
9.反转字符串中的元音字母/: 345.反转字符串中的元音字母.c  README.md
CRC16_MODBUS/: Makefile  core  crc16  crc16_modbus.c  eide_rs485.h  rs485_dispatch.c  rs485_dispatch.h
CRC8/: Makefile  crc8func.c
DAJING_Modbus/: adaptor_reg.h  dj_aricondition.c  haif_ adaptor.c  main.c
Hope_Work/DAJING_Modbus/: Makefile  adaptor_reg.h  common.c  common.h  dj_aricondition.h  haif_adaptor.h  main.c
Hope_Work/GPIO_IN/: Makefile  mian.c
Hope_Work/leshi/: Makefile  cJSON.c  common.c  ls_bt_cmd_dispatch.c  ls_bt_cmd_dispatch.h  ls_bt_mesh.c  ls_bt_mesh.h  ls_bt_mesh_cmd_send.c  ls_bt_mesh_dev.c  ls_bt_mesh_examples.c  main.c  mqtt_detail.c  queue.c
Hope_Work/migu_test/: Makefile  libnghttp2.so.14.13.3  libssl.so.1.0.0  local_common.c  local_common.h  main.c  migu.h  test.json  test1.json  test4.json  test7.json  test_migu
Hope_Work/reg_read/: Makefile  mian.c
Hope_Work/speech_smarthome_lua/: old.json  speech_nshop_old.lua  speech_nshope.lua  test.lua  utils.lua
Hope_Work/testfile/: Makefile  mian.c
Hope_Work/tuya_test/: Makefile  mian.c  tttt.c
Invert each string/: README.md
QQMusic/: Makefile  cJSON.c  common.c  common.h  get_music_lists.lua  main.c  md5.c  md5.h  qq_music_openapi.h  test.lua  test1.lua
base64/: Makefile  base64_test  base64_test.c
char_to_number/: Makefile  main.c
chinese_char/: Makefile  main.c
cjson_test/: Makefile  cJSON.h  main.c
common/: my_common.c  my_common.h
coredump/: Makefile  core-3257-coredump_test-1626344052  coredump_test  coredump_test.c
crond/: Makefile  main.c
epoll_serials/: CMakeLists.txt  Makefile  epoll.c  epoll.h  es_debug.h  list.h  main  main.c  priority_queue.c  priority_queue.h  rio.c  rio.h  serial.conf  serial_common.c  serial_common.h  serials_requset.c  serials_requset.h  threadpool.c  threadpool.h  timer.c  timer.h  util.c  util.h  utils.cmake
epoll_test/: Makefile  main.c
extracted_name/: Makefile  main.c
file_fs/: Makefile  hello.txt  main.c
file_test/: Makefile  file_test.c  hello.txt
fixed_count/: CMakeLists.txt  fixed_count.pb.c  fixed_count.pb.h  fixed_count_unittests.c  malloc_wrappers.c  pb_common.c
getopt_test/: Makefile  main.c
globalfifo_test/: Makefile  auto.sh  globalfifo_aio.c  globalfifo_aio1.c  globalfifo_epoll.c  globalfifo_poll.c  globalfifo_sig.c  globalfifo_test copy.c
globalmem_test/: Makefile  Makefile1111  globalmem_test.c
include/: common.h
ip_weather_test/: Makefile  test.c
libcurl-use/: test.json  test1.json
libcurl-use/easy/: main.c
libcurl-use/getinmemory/: Makefile  curltest  main.c  main.h
libqqmusic_openapi/: Makefile  qq_music_openapi.c  qq_music_openapi.h  qq_music_openapi_private.h
lua_test/: 80年代港乐丨“三王一后”的传奇  diss_info.json  group.lua  label.lua  scene_parse.lua  scenes_list.json  song_info.json  songlist.json  sunxun_test.lua  test.lua  writefile.lua
mcuQueue/: Makefile  main.c  myQueue.c  myQueue.h  qfifo.c  qfifo.h
md5/: Makefile  main.c
memory_test/: Makefile  main.c  mem_test
module_test/: Makefile  Makefile111  globalmem_test.c  module_hello.c
multiplexing/: main.c
music_id3/: Makefile  main.c
music_info/: Makefile  main.c  mp3_id3_tags.h  test.c  test.h
mytest/: .speech_keyword  Makefile  common.h  main.c  test  test.json
nanopb_simple/: Makefile  dmessage.options  dmessage.pb.c  dmessage.pb.h  dmessage.proto  main.c  pb.h  pb_decode.c
nanopb_test1/: Makefile.aa  dmessage.options  dmessage.pb.c  dmessage.pb.c.1  dmessage.pb.h  dmessage.pb.h.1  dmessage.proto  main.c
nanopb_test2/: dmessage.options  dmessage.pb.c  dmessage.pb.h  dmessage.proto  main.c
nanopb_test3/: Makefile  main.c  pb.h  test.options  test.pb.c  test.pb.h  test.proto
nanopb_test4/: CMakeLists.txt  dmessage.options  dmessage.pb.c  dmessage.pb.h  dmessage.proto  main.c
nanopb_test5/: dmessage.options  dmessage.pb.c  dmessage.pb.h  dmessage.proto  main.c
point_test/: Makefile  common.h  point.c  point_test
point_test_1/: common.h  point.c
point_test_2/: Makefile  point.c
point_test_3/: Makefile  point.c  test.txt
protobuff/: Makefile  Makefile1  main.c  readme.md  test.json  test.pb-c.c  test.pb-c.h  test.proto  test1.c
pthread_test/: Makefile  check.sh  main.c
regex_test/: CMakeLists.txt  Makefile  main.c
second_test/: Makefile  second.c  second_test.c
select_test/: Makefile  main.c  test.txt
sem_queue/: README.md  queue.c  queue.h
semaphore/: Makefile  main.c  test1.c  test2.c
serial_test/: Makefile  main.c  serial_common.c  serial_common.h
simple_test/: Makefile  main.c
socketpair/: Makefile  main.c
srgb_test/: Makefile  main.c
test_library/: CMakeLists.txt  library.c
test_library/lib/: libcjson.so.1.7.14
union_test/: Makefile  main.c
utf8/: Makefile  main.c
utf8togbk/: Makefile  test.txt  uft8togbk.c
(+42 files in other folders)
